WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287626
Builds are failing when inspector is disabled
https://bugs.webkit.org/show_bug.cgi?id=287626
Summary
Builds are failing when inspector is disabled
Pawel Lampe
Reported
2025-02-13 04:37:41 PST
So far I tried GTK and WPE ports, both won't build when using -DENABLE_REMOTE_INSPECTOR=OFF
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2025-02-13 04:40:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40552
EWS
Comment 2
2025-02-13 14:09:52 PST
Committed
290363@main
(d48be9165775): <
https://commits.webkit.org/290363@main
> Reviewed commits have been landed. Closing PR #40552 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-13 14:10:19 PST
<
rdar://problem/144813520
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug