Builds are failing when inspector is disabled https://bugs.webkit.org/show_bug.cgi?id=287626

Reviewed by Adrian Perez de Castro.

This changes adds missing '#if ENABLE(REMOTE_INSPECTOR)' guards.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
* Source/WebKit/UIProcess/Automation/WebAutomationSession.h:

Canonical link: https://commits.webkit.org/290363@main